package ejercicio1;

public class Foto {
    private String imagen;
    private String formato;

    public Foto(String imagen, String formato) {
        this.imagen = imagen;
        this.formato = formato;
    }

    public String toString(){
        return "Foto{"+imagen+", "+formato+"}";
    }
}
